first steps for creating a course

--- a/client/views/home/home_guest.html
+++ b/client/views/home/home_guest.html
@@ -8,7 +8,7 @@
         It's completely FREE. Learn and teach what you want. 
       </p>
       </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6"> <!-- log in standard -->
           <h3>Please Log In, or <a href="#">Sign Up</a></h3>
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6">
@@ -42,7 +42,7 @@
               Log In
             </button>
           </form>
-        </div>
+        </div> <!-- end log-in -->
       </div>
   {{>content}}
   {{accountButtons}}
