--- a/client/views/home/home_user.html
+++ b/client/views/home/home_user.html
@@ -3,7 +3,7 @@
     <div class="col-md-3">
       <nav class="nav-sidebar">
         <ul class="nav">
-            <button type="button" class="btn btn-primary">Create a Course</button><a href="{{pathFor 'basicinfo'}}">Create a Course</a>
+            <a class="btn btn-primary" href="{{pathFor 'basicinfo'}}">Create a Course</a>
             <h4 >Categories</h4>
             <li class="nav-divider"></li>
             <li class="active"><a href="javascript:;">Business</a></li>
@@ -11,7 +11,7 @@
             <li><a href="javascript:;">Science</a></li>
             <li><a href="javascript:;">Programming</a></li>
             <li class="nav-divider"></li>
-            <button type="button" class="btn btn-primary">Create a Course</button><a href="{{pathFor 'basicinfo'}}">Create a Course</a>
+            <a class="btn btn-primary" href="{{pathFor 'basicinfo'}}">Create a Course</a>
         </ul>
       </nav>
     </div>
@@ -21,6 +21,7 @@
         <div class="col-lg-12">
           <h2>Popular Courses</h2>
           <hr>
+          
         </div>
       </div>
       <div class="row">
@@ -28,9 +29,6 @@
         {{> course}}
       {{/each}}
       </div>
-      {{#if currentUser}}
-      {{> newcourseform}}
-      {{/if}}
     </div>
   </div>
 </template>
