--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -17,10 +17,10 @@
 			<h3 id="curriculumtitle"> Curriculum of "Course Titlexxx"</h3>		
 
 			<div class="list-group">
-				<a href="#" class="list-group-item">
+				<a class="list-group-item">
 					<h4 class="list-group-item-heading">Section 1: What is Meteor.JS about?</h4>
-					<h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?</h5>
-					<h5 class="list-group-2nd">Lecture 1.2: What is Meteor.JS about?</h5>
+					<h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
+					<h5 class="list-group-2nd">Lecture 1.2: What is Meteor.JS about?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
 					<h5 class="list-group-2nd">Lecture 1.3: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5>
