--- a/client/views/learn/currently_learning.html
+++ b/client/views/learn/currently_learning.html
@@ -55,6 +55,29 @@
             						  	<label class="control-label" for="1stAnswer"></label>
             						  	<input type="radio" name="optionsAnswers" id="1stAnswerOption" value="1stAnswerOption"> First Answer
             						  </div>
+
+            						  <a href="#myModal" role="button" class="btn btn-primary" data-toggle="modal"></span>Check</a>
+            						  <div class="modal fade" id="myModal">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button class="close" data-dismiss="modal">&times;</button>
+												
+												<h3 class="modal-title">Congratulations!</h3>
+											</div><!-- end modal-header -->
+
+											<div class="modal-body">
+												<h5>Your answer is correct. You are rewarded with a point.</h5>
+											</div><!--end modal body-->
+
+											<div class="modal-footer">
+												<button class="btn btn-default center-block" data-dismiss="modal" type="button">Close</button> 
+											</div><!--end modal footer-->
+
+										</div><!--end modal content-->
+									</div><!--end modal dialog-->
+								</div><!--end SPECIFIC myModal-->
+            						</form><!-- end form -->  
             			</div> <!--tab pane-->
             		</div> <!--tab content-->
             	</div>	<!--col 9-->    
