--- a/client/views/home/home_user.html
+++ b/client/views/home/home_user.html
@@ -18,15 +18,7 @@
 
     <div class="col-md-9">
       <div class="row">
-        <div class="col-lg-12">
-          <h2>Popular Courses</h2>
-          <hr>
-        </div>
-      </div>
-      <div class="row">
-      {{#each courses}}
-        {{> course}}
-      {{/each}}
+          {{>content}}
       </div>
     </div>
   </div>
