--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -5,7 +5,7 @@
             <div class="col-sm-3">
                 <nav class="nav-sidebar">
                     <ul class="nav">
-                        <h4 >Coursetitle (with handlebars)</h4>
+                        <h4 >Coursetitle <strong>{{courseTitle}}</strong></h4>
                         <li class="nav-divider"></li>
                         <li class="active"><a href="{{pathFor 'basicinfo'}}">Basic Info</a></li>
                         <li><a href="{{pathFor 'curriculum'}}">Curriculum</a></li>
@@ -14,7 +14,7 @@
                 </nav>
             </div>
 		<div class="col-sm-9 well">
-			<h3 id="curriculumtitle"> Curriculum of "Course Titlexxx"</h3>		
+			<h3 id="curriculumtitle"> Curriculum of <strong>{{courseTitle}}</strong></h3>		
 
 			<div class="list-group">
 				<a class="list-group-item">
@@ -24,8 +24,33 @@
 					<h5 class="list-group-2nd">Lecture 1.3: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5>
-					<h5 class="list-group-2nd btn btn-primary">+ Add Lecture to Section 1</h5>
+					<br>
+					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#myModal">
+					  + Add Lecture to this Section
+					</button>
 				</a>
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				        <h4 class="modal-title" id="myModalLabel">Choose the Name of the Lecture</h4>
+				      </div>
+				      <div class="modal-body">
+				        <form role="form">
+				          <div class="form-group">
+				            <input type="text" class="form-control" name="lectureTitle" id="lectureTitle" placeholder="type the name of the lecture here">
+				          </div>
+				        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				        <button type="submit" class="btn btn-primary">Save</button>
+				        </form>
+				      </div>
+				    </div><!-- /.modal-content -->
+				  </div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
 
 				<a href="#" class="list-group-item">
 					<h4 class="list-group-item-heading">Section 2: Templates</h4>
