--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -24,6 +24,9 @@
 					<h5 class="list-group-2nd">Lecture 1.3: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5>
+					{{#each lectures}}
+						{{> lecture}}
+					{{/each}}	
 					<br>
 					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#myModal">
 					  + Add Lecture to this Section
