--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -5,7 +5,7 @@
             <div class="col-sm-3">
                 <nav class="nav-sidebar">
                     <ul class="nav">
-                        <h4 >Coursetitle <strong>{{courseTitle}}</strong></h4>
+                        <h4 >Coursetitle <strong>{{course.courseTitle}}</strong></h4>
                         <li class="nav-divider"></li>
                         <li class="active"><a href="{{pathFor 'basicinfo'}}">Basic Info</a></li>
                         <li><a href="{{pathFor 'curriculum'}}">Curriculum</a></li>
@@ -19,13 +19,13 @@
 			<div class="list-group">
 				<a class="list-group-item">
 					<h4 class="list-group-item-heading">Section 1: What is Meteor.JS about?</h4>
-					<h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
+					<!-- <h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
 					<h5 class="list-group-2nd">Lecture 1.2: What is Meteor.JS about?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
 					<h5 class="list-group-2nd">Lecture 1.3: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
-					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5>
-					{{#each lectures}}
-						{{> lecture}}
+					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5> -->
+					{{#each lectures}}						
+  					<h5 class="list-group-2nd">{{lectureTitle}}</h5>
 					{{/each}}	
 					<br>
 					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#myModal">
