--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -14,7 +14,7 @@
                 </nav>
             </div>
 		<div class="col-sm-9 well">
-			<h3 id="curriculumtitle"> Curriculum of <strong>{{courseTitle}}</strong></h3>		
+			<h3 id="curriculumtitle"> Curriculum of <strong>{{course.courseTitle}}</strong></h3>		
 
 			<div class="list-group">
 				<a class="list-group-item">
@@ -25,7 +25,7 @@
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5> -->
 					{{#each lectures}}						
-  					<h5 class="list-group-2nd">{{lectureTitle}}</h5>
+  					<h5 class="list-group-2nd">Lecture: {{lectureTitle}}</h5>
 					{{/each}}	
 					<br>
 					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#myModal">
@@ -56,28 +56,32 @@
 				</div><!-- /.modal -->
 
 				<a href="#" class="list-group-item">
-					<h4 class="list-group-item-heading">Section 2: Templates</h4>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd btn btn-primary">+ Add Lecture to Section 2</h5>
-				</a>
-
-				<a href="#" class="list-group-item">
-					<h4 class="list-group-item-heading">Section 3: Adding Users</h4>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd">xxx</h5>
-					<h5 class="list-group-2nd btn btn-primary">+ Add Lecture to Section 3</h5>
-				</a>
-
-				<a href="#" class="list-group-item">
 					<h4 class="list-group-item-heading">Add New Section</h4>
-					<h4 class="list-group-2nd btn btn-primary"> + Add New Section to this Course</h4>
+					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#mySectionModal">
+					  + Add New Section to this Course
+					</button>
+					<div class="modal fade" id="mySectionModal" tabindex="-1" role="dialog" aria-labelledby="mySectionModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				        <h4 class="modal-title" id="mySectionModalLabel">Choose the Name of the Section</h4>
+				      </div>
+			        <form role="form">
+				      	<div class="modal-body">
+				          <div class="form-group">
+				            <input type="text" class="form-control" name="sectionTitle" id="sectionTitle" placeholder="type the name of the section here">
+				          </div>
+				        
+					      </div>
+					      <div class="modal-footer">
+					        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					        <button type="submit" class="btn btn-primary">Save</button>
+					      </div>
+			        </form>
+				    </div><!-- /.modal-content -->
+				  </div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
 				</a>
 
 			</div><!-- list-group -->
