--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -14,16 +14,59 @@
                 </nav>
             </div>
 		<div class="col-sm-9 well">
-			<h3 id="curriculumtitle"> Curriculum of <strong>{{course.courseTitle}}</strong></h3>		
-
+			<h3 id="curriculumtitle"> Curriculum of <strong>{{course.courseTitle}}</strong></h3>
+			
 			<div class="list-group">
+				{{#each sections}}
+					{{>section}}
+				{{/each}}
+
+				<div href="#" class="list-group-item">
+					<h4 class="list-group-item-heading">Add New Section</h4>
+					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#mySectionModal">
+					  + Add New Section to this Course
+					</button>
+				</div>
+			</div>			
+	 	</div> <!-- row -->
+  </div><!-- /.container -->
+
+  {{>addSectionModal}}
+</template>
+
+<template name="addSectionModal">
+	<div class="modal fade" id="mySectionModal" tabindex="-1" role="dialog" aria-labelledby="mySectionModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	        <h4 class="modal-title" id="mySectionModalLabel">Choose the Name of the Section</h4>
+	      </div>
+        <form role="form">
+	      	<div class="modal-body">
+	          <div class="form-group">
+	            <input type="text" class="form-control" name="sectionTitle" id="sectionTitle" placeholder="type the name of the section here">
+	          </div>	        
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+		        <button type="submit" class="btn btn-primary">Save</button>
+		      </div>
+        </form>
+	    </div>
+	  </div>
+	</div>
+</template>
+
+<!--
+<div class="list-group">
 				<a class="list-group-item">
 					<h4 class="list-group-item-heading">Section 1: What is Meteor.JS about?</h4>
-					<!-- <h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
+					<h5 class="list-group-2nd">Lecture 1.1: Framework - fullstack ...?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
 					<h5 class="list-group-2nd">Lecture 1.2: What is Meteor.JS about?<span id="editbutton" class="btn btn-danger pull-right">Edit</span></h5>
 					<h5 class="list-group-2nd">Lecture 1.3: What is Meteor.JS about?</h5>
 					<h5 class="list-group-2nd">Lecture 1.4: What is Meteor.JS about?</h5>
-					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5> -->
+					<h5 class="list-group-2nd">Lecture 1.5: What is Meteor.JS about?</h5>
 					{{#each lectures}}						
   					<h5 class="list-group-2nd">Lecture: {{lectureTitle}}</h5>
 					{{/each}}	
@@ -51,9 +94,9 @@
 					        <button type="submit" class="btn btn-primary">Save</button>
 					      </div>
 			        </form>
-				    </div><!-- /.modal-content -->
-				  </div><!-- /.modal-dialog -->
-				</div><!-- /.modal -->
+				    </div>
+				  </div>
+				</div>
 
 				<a href="#" class="list-group-item">
 					<h4 class="list-group-item-heading">Add New Section</h4>
@@ -79,13 +122,12 @@
 					        <button type="submit" class="btn btn-primary">Save</button>
 					      </div>
 			        </form>
-				    </div><!-- /.modal-content -->
-				  </div><!-- /.modal-dialog -->
-				</div><!-- /.modal -->
+				    </div>
+				  </div>
+				</div>
 				</a>
 
-			</div><!-- list-group -->
-		</div><!-- end col-sm-9 -->
-	 </div> <!-- row -->
-    </div><!-- /.container -->
-</template>
+			</div>
+		</div>
+
+-->
