--- a/client/views/teach/lecture.html
+++ b/client/views/teach/lecture.html
@@ -1,3 +1,3 @@
 <template name="lecture">
-  <h5 class="list-group-2nd">{{this.count}}: {{lectureTitle}}</h5>
+  <h5 class="list-group-2nd">Lecture: {{lectureTitle}} <a href="{{pathFor 'lectureedit'}}" id="editbutton" class="btn btn-danger pull-right">Edit</a></h5>
 </template>
