--- a/client/views/teach/section.html
+++ b/client/views/teach/section.html
@@ -1,3 +1,35 @@
 <template name="section">
-  <h4 class="list-group-item-heading">Section {{this.count}}: {{sectionTitle}}</h4>
+  <h4 class="list-group-item-heading">Section: {{sectionTitle}}</h4>
+  {{#each sectionLectures}}
+    {{>lecture}}
+  {{/each}}
+  <button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#modal-{{_id}}">
+    + Add Lecture to this Section
+  </button>  
+  {{>addLectureModal}}
+</template>
+
+<template name="addLectureModal">
+  <div class="modal fade" id="modal-{{_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">Choose the Name of the Lecture</h4>
+        </div>
+        <form role="form">
+          <div class="modal-body">
+            <div class="form-group">
+              <input type="text" class="form-control" name="lectureTitle" id="lectureTitle" placeholder="type the name of the lecture here">
+            </div>
+          
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </template>
