minor css stuff

--- a/client/views/home/home_user.html
+++ b/client/views/home/home_user.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <nav class="nav-sidebar">
-        <ul class="nav">
+        <ul class="nav" id="nav-side-teach">
             <a class="btn btn-primary" href="{{pathFor 'basicinfo'}}">Create a Course</a>
             <h4 >Categories</h4>
             <li class="nav-divider"></li>
