--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -21,7 +21,7 @@
 					{{>section}}
 				{{/each}}
 
-				<div href="#" class="list-group">
+				<div href="#" class="list-group section">
 					<h4 class="list-group-item-heading">Add New Section</h4>
 					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#mySectionModal">
 					  + Add New Section to this Course
