Display "Own Courses" Only Owner can admin Courses (not working, yet)

--- a/client/views/teach/curriculum.html
+++ b/client/views/teach/curriculum.html
@@ -23,9 +23,9 @@
 
 				<div href="#" class="list-group section">
 					<h4 class="list-group-item-heading">Add New Section</h4>
-					<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#mySectionModal">
+					{{#if myCourse}}<button class="list-group-2nd btn btn-primary" data-toggle="modal" data-target="#mySectionModal">
 					  + Add New Section to this Course
-					</button>
+					</button>{{/if}}
 				</div>
 			</div>			
 	 	</div> <!-- row -->
