show all lectures and sections correctly

--- a/client/views/learn/currently_learning.html
+++ b/client/views/learn/currently_learning.html
@@ -91,8 +91,9 @@
 <template name="currentCurriculum">
       {{#each sections}}
         <li class="active"><a href="{{pathFor 'basicinfo'}}">{{sectionTitle}}</a></li>
-      {{/each}}     
-      {{#each lectures}}
-        <li class="nav-second"><a href="{{pathFor 'curriculum'}}">{{lectureTitle}}</a></li>           
-      {{/each}}       
+        {{#each sectionsLectures}}
+            {{test}}
+            <li class="nav-second"><a href="{{pathFor 'curriculum'}}">{{lectureTitle}}</a></li>           
+        {{/each}}  
+      {{/each}}      
 </template>
