change request, copy course

--- a/client/views/course/course_left_nav.html
+++ b/client/views/course/course_left_nav.html
@@ -1,4 +1,5 @@
 <template name="courseLeftNav">
+  <p><a href="{{pathForCourseShow}}"><strong class="left-nav-headline">{{course.courseTitle}}</strong></a></p>
   <div class="course-left-nav">
     {{#each sections}}
       {{>sectionMenuItem}}
