--- a/client/views/lecture/lecture_menu_item.html
+++ b/client/views/lecture/lecture_menu_item.html
@@ -1,3 +1,3 @@
 <template name="lectureMenuItem">
-  <li class="{{active}}"><a href="{{lecturePath ../../course}}">{{lectureTitle}}</a></li>
+  <li class="{{active}}"><a href="{{lecturePath ../../course}}">{{lectureIndex .. }} {{lectureTitle}}</a></li>
 </template>
