--- a/client/views/lecture/my_lecture_menu_item.html
+++ b/client/views/lecture/my_lecture_menu_item.html
@@ -1,3 +1,3 @@
 <template name="myLectureMenuItem">
-  <p class="{{active}}"><a href="{{lecturePath ../../course}}">{{lectureTitle}}</a></p>
+  <p class="{{active}}"><a href="{{lecturePath ../../course}}">{{lectureIndex .. }} {{lectureTitle}}</a></p>
 </template>
