--- a/client/views/section/section_menu_item.html
+++ b/client/views/section/section_menu_item.html
@@ -1,6 +1,6 @@
 <template name="sectionMenuItem">
   <div class="panel panel-default">
-    <div class="panel-heading"><strong>{{sectionTitle}}</strong></div>
+    <div class="panel-heading"><strong>{{sectionIndex}} {{sectionTitle}}</strong></div>
     <div class="panel-body">
       <ul class="nav nav-pills nav-stacked">
         {{#each lectures}}
