--- a/client/views/change_request/change_request_list_item.html
+++ b/client/views/change_request/change_request_list_item.html
@@ -1,3 +1,9 @@
 <template name="changeRequestListItem">
-  <a href="{{pathFor 'changeRequestShow'}}">A change request</a>
+  <p>
+    {{#if isOpen}}
+    <a href="{{pathFor 'changeRequestShow'}}">A change request</a>
+    {{else}}
+    Old change request
+    {{/if}}
+  </p>
 </template>
