--- a/client/views/course/course_list.html
+++ b/client/views/course/course_list.html
@@ -1,7 +1,7 @@
 <template name="courseList">
   <div class="row">
   {{#each popularCourses}}
-    <div class="col-md-4">
+    <div class="col-lg-3 col-sm-4">
       {{>courseListItem}}
     </div>
   {{/each}}
