--- a/client/views/course/course_list_item.html
+++ b/client/views/course/course_list_item.html
@@ -1,7 +1,13 @@
 <template name="courseListItem">
-  <div class="well course-list-item">
-    <div class="course"><h4><a href="{{pathFor 'courseShow'}}">{{courseTitle}}</a></h4></div>
-    <div class="name"><h5>{{{category}}}</h5></div>
-    <div class="age "><h5>Age: {{age}}</h5></div>
+  <div class="course-list-item">
+    <a href="{{pathFor 'courseShow'}}">
+      <div class="course-img"><img class="img-resonsive" src="{{courseThumb}}"></div>
+      <div class="well">
+        <div class="course"><h4>{{courseTitle}}</h4></div>
+        <p class="course-list-item-preview-text">{{getText 50}}</p>
+        <p><i class="fa fa-tags" title="Tags"></i> {{getKeywords}}</p>
+        <p><i class="fa fa-group" title="Age Group"></i> {{age}}</p>
+      </div>
+    </a>
   </div>
 </template>
