--- a/client/views/course/course_update.html
+++ b/client/views/course/course_update.html
@@ -16,12 +16,14 @@
       <div class="col-lg-6">
         {{>renderFormField age}}
       </div>
+      {{#if course.isMyCourse}}
       <div class="col-lg-3">
         {{>renderFormField published}}
       </div>
+      {{/if}}
     </div>
     <div class="pull-right">
-      <button type="button" class="btn btn-danger delete">Delete Course</button>
+      {{#if course.isMyCourse}}<button type="button" class="btn btn-danger delete">Delete Course</button>{{/if}}
       <button type="submit" class="btn btn-default">Update</button>
     </div>
   </form>
