--- a/client/views/index/top_navigation.html
+++ b/client/views/index/top_navigation.html
@@ -16,12 +16,12 @@
       </div>
       <div class="collapse navbar-collapse ">
         <ul class="nav navbar-nav">
-          <li class="{{#if navActive 'courseList' 'courseShow'}}active{{/if}}"><a href="{{pathFor 'courseList'}}">Courses</a></li>
+          <li class="{{#if navActive 'courseList' 'courseShow' 'lectureShow' 'courseChangeRequest' 'lectureChangeRequest'}}active{{/if}}"><a href="{{pathFor 'courseList'}}">Courses</a></li>
           <li class="{{#if navActive 'teach' 'myCourses' 'courseUpdate' 'sectionUpdate' 'lectureUpdate'}}active{{/if}}"><a href="{{pathFor 'teach'}}">Teach</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
-          <li class="{{#if navActive 'changeRequests'}}active{{/if}}"><a href="{{pathFor 'changeRequests'}}">Change Requests</a></li>
+          <li class="{{#if navActive 'changeRequests'}}active{{/if}}"><a href="{{pathFor 'changeRequests'}}">Change Requests <span class="badge">{{userOpenChangeRequests}}</span></a></li>
           <li class="{{#if navActive 'profile'}}active{{/if}}"><a href="{{pathFor 'profile'}}">My Profile <span class="badge">{{userPointsTotal}}</span></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
