--- a/client/views/section/my_section_menu_item.html
+++ b/client/views/section/my_section_menu_item.html
@@ -1,6 +1,6 @@
 <template name="mySectionMenuItem">
   <div class="panel panel-default">
-    <div class="panel-heading {{active}}"><a href="{{sectionPath ../course}}">{{sectionTitle}}</a></div>
+    <div class="panel-heading {{active}}"><a href="{{sectionPath ../course}}">{{sectionIndex}} {{sectionTitle}}</a></div>
     <div class="panel-body">
       {{#each lectures}}
       {{> myLectureMenuItem}}
