--- a/client/stylesheet/style.less
+++ b/client/stylesheet/style.less
@@ -10,6 +10,7 @@
 @import "components/course_list_item.lessimport";
 @import "components/bootstrap_tabs.lessimport";
 @import "components/my_course_left_nav.lessimport";
-
+@import "components/meta_information.lessimport";
+@import "components/well.lessimport";
 
 // SITES
