--- a/client/views/course/course_list.html
+++ b/client/views/course/course_list.html
@@ -1,6 +1,6 @@
 <template name="courseList">
   <div class="row">
-  {{#each popularCourses}}
+  {{#each courses}}
     <div class="col-lg-3 col-sm-4">
       {{>courseListItem}}
     </div>
