--- a/client/views/course/my_course_list.html
+++ b/client/views/course/my_course_list.html
@@ -1,11 +1,5 @@
 <template name="myCourseList">
   <button class="btn btn-primary new-course"><i class="fa fa-plus"></i> Create a Course</button>
   <hr>
-  <div class="row">
-    {{#each ownCourses}}
-    <div class="col-xs-12 col-md-4">
-      {{> myCourseListItem}}
-    </div>
-    {{/each}}
-  </div>
+  {{>courseList courses=ownCourses}}
 </template>
