--- a/client/views/lecture/lecture_show_exercise.html
+++ b/client/views/lecture/lecture_show_exercise.html
@@ -1,4 +1,5 @@
 <template name="lectureShowExercise">
-  <p>{{lecture.intro}}</p>
-  {{{renderMarkdown}}}
+  <div class="well well-tabnav">
+    {{{renderMarkdown}}}
+  </div>
 </template>
