--- a/client/views/quiz/quiz_show.html
+++ b/client/views/quiz/quiz_show.html
@@ -1,4 +1,6 @@
 <template name="quizShow">
-  <h4>{{quiz.quizIntro}}</h4>
-  {{>renderForm form}}
+  <div class="well well-tabnav">
+    <h4>{{quiz.quizIntro}}</h4>
+    {{>renderForm form}}
+  </div>
 </template>
