--- a/client/views/course/course_update.html
+++ b/client/views/course/course_update.html
@@ -4,9 +4,7 @@
       <div class="col-lg-12">
         {{>renderFormField title}}
       </div>
-      <div class="col-lg-12">
-        {{>renderFormField subtitle}}
-      </div>
+
       <div class="col-lg-12">
         {{>renderFormField keywords}}
       </div>
@@ -22,9 +20,19 @@
       </div>
       {{/if}}
     </div>
+    <p><strong>Course Description</strong></p>
+    {{>markdownEditor}}
+    {{#with inputName="markdown"}}
+    <span id="{{ inputName }}-help" class="text-danger" style="display:{{ helpTextVisibleStyle }};">{{ getHelpTextForField }}</span>
+    {{/with}}
     <div class="pull-right">
       {{#if course.isMyCourse}}<button type="button" class="btn btn-danger delete">Delete Course</button>{{/if}}
       <button type="submit" class="btn btn-default">Update</button>
     </div>
   </form>
 </template>
+
+<!--
+<div class="col-lg-12">
+  {{>renderFormField subtitle}}
+</div> -->
