--- a/client/views/index/home_guest.html
+++ b/client/views/index/home_guest.html
@@ -3,7 +3,7 @@
     <div class="col-sm-6">
       <h1 class="page-header">Learn and Create courses together</h1>
       <p class="lead"> We believe that YOU - with the power of the crowd - can
-        build the best courses possible. Democratize education. 
+        build the best courses possible. Democratize education.
         It's completely FREE. Learn and teach what you want.
       </p>
     </div>
@@ -40,12 +40,12 @@
   </div>
 
   <h2>Popular Courses</h2>
-  <div class="row">    
+  <div class="row">
     {{#each popularCourses}}
-    <div class="col-md-4">
+    <div class="col-lg-3 col-sm-4">
       {{> courseListItem}}
     </div>
     {{/each}}
   </div>
-      
+
 </template>
