--- a/client/views/index/top_navigation.html
+++ b/client/views/index/top_navigation.html
@@ -24,7 +24,7 @@
           <li class="{{#if navActive 'changeRequests'}}active{{/if}}"><a href="{{pathFor 'changeRequests'}}">Change Requests <span class="badge">{{userOpenChangeRequests}}</span></a></li>
           <li class="{{#if navActive 'profile'}}active{{/if}}"><a href="{{pathFor 'profile'}}">My Profile <span class="badge">{{userPointsTotal}}</span></a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{userEmail}} <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="{{pathFor 'accountSettings'}}">Settings</a></li>
               <li class="divider"></li>
