--- a/client/stylesheet/components/offcanvas.css
+++ b/client/stylesheet/components/offcanvas.css
@@ -4,7 +4,7 @@
  */
 html,
 body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
+  /* overflow-x: hidden; */ /* Prevent scroll on narrow devices */
 }
 body {
   padding-top: 70px;
