--- a/client/stylesheet/style.less
+++ b/client/stylesheet/style.less
@@ -4,6 +4,7 @@
 @import "variables.lessimport";
 @import "layout.lessimport";
 @import "snippets.lessimport";
+@import "typo.import.less";
 
 // COMPONENTS
 @import "components/navbar.lessimport";
