--- a/client/views/change_request/quiz_change_request_approval.html
+++ b/client/views/change_request/quiz_change_request_approval.html
@@ -2,7 +2,7 @@
   <h1>{{{quizTitleDiff}}}</h1>
 
   <div class="well">
-    <p>Answer 1:<br>{{{anwerOneDiff}}}</p>
+    <p>{{{renderCorrectHint 0}}} Answer 1:<br>{{{anwerOneDiff}}}</p>
     <p>Answer 2:<br>{{{anwerTwoDiff}}}</p>
     <p>Answer 3:<br>{{{anwerThreeDiff}}}</p>
     <p>Answer 4:<br>{{{anwerFourDiff}}}</p>
