--- a/client/views/course/course_show.html
+++ b/client/views/course/course_show.html
@@ -19,7 +19,7 @@
     <span><i class="fa fa-tags" title="Tags"></i> {{course.getKeywords}}</span>
   </p>
 
-  <div class="well">
+  <div class="well img-max-width-100">
     {{#with course}}
     {{{renderMarkdown}}}
     {{/with}}
