--- a/client/views/index/home_guest.html
+++ b/client/views/index/home_guest.html
@@ -11,10 +11,10 @@
       <h3>Please Log In, or <a href="{{pathFor 'entrySignUp'}}">Sign Up</a></h3>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
+          <a href="#" class="btn btn-lg btn-primary btn-block login-fb">Facebook</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" class="btn btn-lg btn-info btn-block">Google</a>
+          <a href="#" class="btn btn-lg btn-info btn-block login-g">Google</a>
         </div>
       </div>
       <div class="login-or">
