--- a/client/views/lecture/lecture_show_exercise.html
+++ b/client/views/lecture/lecture_show_exercise.html
@@ -1,5 +1,5 @@
 <template name="lectureShowExercise">
-  <div class="well well-tabnav">
+  <div class="well well-tabnav img-max-width-100">
     {{{renderMarkdown}}}
   </div>
 </template>
