added intro course in top navbar added footer (with contact details, imprint and terms) updated logo

--- a/client/stylesheet/style.less
+++ b/client/stylesheet/style.less
@@ -13,5 +13,6 @@
 @import "components/my_course_left_nav.lessimport";
 @import "components/meta_information.lessimport";
 @import "components/well.lessimport";
+@import "components/footer";
 
 // SITES
