--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -8,3 +8,14 @@
     {{>loginButtons}}
   </div>
 </template>
+
+<template name="footer">
+	<div class="footer">
+		<a target="_blank" href="http://www.twitter.com/crowducate"><i class="fa fa-twitter fa-lg"></i></a> |
+		<a target="_blank" href="https://github.com/Crowducate"><i class="fa fa-github fa-lg"></i></a> |
+		<a href="mailto:info@crowducate.me"><i class="fa fa-envelope fa-lg"></i></a> |
+		<a target="_blank" href="http://blog.crowducate.me/">Blog</a> |
+		<a target="_blank" href="{{pathFor 'terms'}}">Terms</a> |
+		<a target="_blank" href="{{pathFor 'imprint'}}">Imprint</a> 
+	</div>	
+</template>
