--- a/client/views/index/layout_left_nav.html
+++ b/client/views/index/layout_left_nav.html
@@ -17,4 +17,10 @@
       {{>yield}}
     </div>
   </div><!-- container -->
+
+  <div class="container">
+    <div class="col-lg-12">
+      {{>footer}}
+    </div>
+  </div>
 </template>
