--- a/client/views/index/layout_base.html
+++ b/client/views/index/layout_base.html
@@ -12,4 +12,10 @@
   <div class="container">
     {{>yield}}
   </div>
+
+  <div class="container">
+    <div class="col-lg-12">
+      {{>footer}}
+    </div>
+  </div>
 </template>
