--- a/client/views/static/howto_teach.html
+++ b/client/views/static/howto_teach.html
@@ -1,3 +1,6 @@
 <template name="howtoTeach">
-  <h1>It is easy to teach on eduhub</h1>
+  <div class="well">
+	  <h1>It is so Easy and Fun to Teach on Crowducate!</h1>
+	  <p>Just click on "Sign Up" (in the upper right). After that, click on teach again and press the blue button "+ Create A Course". If you want to know more, check out the Introduction Course of Crowducate.</p>
+  </div>
 </template>
