minor bug fix + some wording

--- a/client/views/index/home_guest.html
+++ b/client/views/index/home_guest.html
@@ -1,10 +1,10 @@
 <template name="homeGuest">
   <div class="row">
     <div class="col-sm-6">
-      <h1 class="page-header">Learn and Create courses together</h1>
+      <h1 class="page-header">Democratize education. Enjoy education.</h1>
       <p class="lead"> We believe that YOU - with the power of the crowd - can
-        build the best courses possible. Democratize education.
-        It's completely FREE. Learn and teach what you want.
+        build the best courses possible. Learn and Create courses together for any subject.
+        It's FREE. Democratize education. Enjoy education. 
       </p>
     </div>
     <div class="col-sm-6"> <!-- log in standard -->
