'Exercise' is now 'lesson'. Added 'other' category

--- a/client/views/lecture/lecture_show_lesson.html
+++ b/client/views/lecture/lecture_show_lesson.html
@@ -1,4 +1,4 @@
-<template name="lectureShowExercise">
+<template name="lectureShowLesson">
   <div class="well well-tabnav img-max-width-100">
     {{{renderMarkdown}}}
   </div>
