--- a/client/views/lecture/lecture_update_lesson.html
+++ b/client/views/lecture/lecture_update_lesson.html
@@ -1,4 +1,4 @@
-<template name="lectureUpdateExercise">
+<template name="lectureUpdateLesson">
   <div class="well well-tabnav">
     <form id="form-lecture-update">
       {{#each formFields}}
