--- a/client/views/static/howto_teach.html
+++ b/client/views/static/howto_teach.html
@@ -1,6 +1,6 @@
 <template name="howtoTeach">
   <div class="well">
 	  <h1>It is so Easy and Fun to Teach on Crowducate!</h1>
-	  <p>Just click on "Sign Up" (in the upper right). After that, click on teach again and press the blue button "+ Create A Course". If you want to know more, check out the Introduction Course of Crowducate.</p>
+	  <p><a href="{{pathFor 'entrySignUp'}}">Sign Up</a>, click on teach again and finally press the blue button "+ Create A Course". If you want to know more, check out the Introduction Course of Crowducate.</p>
   </div>
 </template>
