Added Feedback/Support Forum

--- a/client/views/index/top_navigation.html
+++ b/client/views/index/top_navigation.html
@@ -19,6 +19,7 @@
           <li class="{{#if navActive 'intro'}}active{{/if}}"><a href="{{pathFor 'intro'}}">Intro</a></li>
           <li class="{{#if navActive 'courseList' 'courseShow' 'lectureShow' 'courseChangeRequest' 'lectureChangeRequest'}}active{{/if}}"><a href="{{pathFor 'courseList'}}">Learn</a></li>
           <li class="{{#if navActive 'teach' 'myCourses' 'courseUpdate' 'sectionUpdate' 'lectureUpdate'}}active{{/if}}"><a href="{{pathFor 'teach'}}">Teach</a></li>
+          <li><a href="http://crowducate.uservoice.com/" target="_blank">Feedback/Support</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
