--- a/client/views/index/top_navigation.html
+++ b/client/views/index/top_navigation.html
@@ -23,11 +23,12 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
-          <li class="{{#if navActive 'changeRequests'}}active{{/if}}"><a href="{{pathFor 'changeRequests'}}">Change Requests <span class="badge">{{userOpenChangeRequests}}</span></a></li>
-          <li class="{{#if navActive 'profile'}}active{{/if}}"><a href="{{pathFor 'profile'}}">My Profile <span class="badge">{{userPointsTotal}}</span></a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{userEmail}} <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{maxChars userEmail 12}} <b class="caret"></b></a>
             <ul class="dropdown-menu">
+              <li class="{{#if navActive 'changeRequests'}}active{{/if}}"><a href="{{pathFor 'changeRequests'}}">Change Requests <span class="badge">{{userOpenChangeRequests}}</span></a></li>
+              <li class="{{#if navActive 'profile'}}active{{/if}}"><a href="{{pathFor 'profile'}}">My Profile <span class="badge">{{userPointsTotal}}</span></a></li>
+              <li class="divider"></li>
               <li><a href="{{pathFor 'accountSettings'}}">Settings</a></li>
               <li class="divider"></li>
               <li><a href="{{pathFor 'logout'}}">Logout</a></li>
