--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -16,6 +16,7 @@
 		<a href="mailto:info@crowducate.me"><i class="fa fa-envelope fa-lg"></i></a> |
 		<a target="_blank" href="http://blog.crowducate.me/">Blog</a> |
 		<a target="_blank" href="{{pathFor 'terms'}}">Terms</a> |
-		<a target="_blank" href="{{pathFor 'imprint'}}">Imprint</a> 
+		<a target="_blank" href="{{pathFor 'imprint'}}">Imprint</a> |
+		<a target="_blank" href="http://blog.crowducate.me/open-badges-open-education/"><img src="images/OpenBadges_Insignia_Issue.png"></a>
 	</div>	
 </template>
