--- a/client/views/course/course_list_item.html
+++ b/client/views/course/course_list_item.html
@@ -11,8 +11,10 @@
         <img class="img-resonsive" src="{{courseThumb}}">
       </div>
       <div class="well relative">
-        <div class="course"><h4>{{maxChars courseTitle 40}}</h4></div>
+        <div class="course"><h4>{{maxChars courseTitle 40}} by {{owner}}</h4></div>
         <p class="course-list-item-preview-text">{{maxChars getText 65}}</p>
+        <p class="course-list-item-preview-text-votes"><a href="#"><i class="upvote fa fa-thumbs-up"></i></a><strong> {{votes}}</strong> Votes</p>
+        <!-- <p class="course-list-item-preview-text">12 Votes</p> -->
         <div class="bottom">
           <p><i class="fa fa-tags" title="Tags"></i> {{maxChars getKeywords 28}}</p>
           <p><i class="fa fa-group" title="Age Group"></i> {{age}}</p>
