added username signup and owner/creator name to course list

--- a/client/views/course/course_list_item.html
+++ b/client/views/course/course_list_item.html
@@ -12,6 +12,7 @@
       </div>
       <div class="well relative">
         <div class="course"><h4>{{maxChars courseTitle 40}}</h4></div>
+				<p><b>by {{owner.username}} {{owner.profile.name}}</b></p>
         <p class="course-list-item-preview-text">{{maxChars getText 65}}</p>
         <div class="bottom">
           <p><i class="fa fa-tags" title="Tags"></i> {{maxChars getKeywords 28}}</p>
