--- a/client/views/course/course_update.html
+++ b/client/views/course/course_update.html
@@ -8,14 +8,15 @@
       <div class="col-lg-12">
         {{>renderFormField keywords}}
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-12">
         {{>renderFormField category}}
       </div>
+      <!-- commented out because of user feedback
       <div class="col-lg-6">
         {{>renderFormField age}}
-      </div>
+      </div> --> 
       {{#if course.isMyCourse}}
-      <div class="col-lg-3">
+      <div class="col-lg-12">
         {{>renderFormField published}}
       </div>
       {{/if}}
