Sort Courses by # of Votes + minor fix

--- a/client/views/course/course_show.html
+++ b/client/views/course/course_show.html
@@ -15,7 +15,7 @@
 
   <p class="meta-information">
     <span><i class="fa fa-folder" title="Category"></i> {{course.getCategory}}</span>
-    <span><i class="fa fa-group" title="Age Group"></i> {{course.getAge}}</span>
+    <span><i class="fa fa-thumbs-up" title="Votes"></i> {{course.getVotes}}</span>
     <span><i class="fa fa-tags" title="Tags"></i> {{course.getKeywords}}</span>
   </p>
 
